--- a/Meals-Drinks/Cells/RandomMealCollectionViewCell.xib
+++ b/Meals-Drinks/Cells/RandomMealCollectionViewCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CategoryCollectionViewCell" customModule="Meals_Drinks" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="RandomMealCollectionViewCell" customModule="Meals_Drinks" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="100" height="140"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -22,7 +22,7 @@
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rtp-4X-GM3">
                                 <rect key="frame" x="0.0" y="0.0" width="100" height="97"/>
-                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aRC-fj-QCe">
                                 <rect key="frame" x="0.0" y="97" width="100" height="43"/>
@@ -36,6 +36,7 @@
                             <constraint firstItem="aRC-fj-QCe" firstAttribute="top" secondItem="rtp-4X-GM3" secondAttribute="bottom" id="0R9-r8-SZv"/>
                             <constraint firstItem="aRC-fj-QCe" firstAttribute="top" secondItem="rtp-4X-GM3" secondAttribute="bottom" id="2N3-qX-QNL"/>
                             <constraint firstAttribute="bottom" secondItem="rtp-4X-GM3" secondAttribute="bottom" constant="43" id="6D1-TM-hJh"/>
+                            <constraint firstAttribute="height" constant="140" id="CeK-dL-du1"/>
                             <constraint firstAttribute="trailing" secondItem="rtp-4X-GM3" secondAttribute="trailing" id="EFq-jK-jBF"/>
                             <constraint firstAttribute="trailing" secondItem="rtp-4X-GM3" secondAttribute="trailing" id="FwB-PO-y7k"/>
                             <constraint firstItem="aRC-fj-QCe" firstAttribute="leading" secondItem="31B-x2-KTX" secondAttribute="leading" id="Gbd-Rh-1Pt"/>
@@ -48,6 +49,7 @@
                             <constraint firstItem="rtp-4X-GM3" firstAttribute="top" secondItem="31B-x2-KTX" secondAttribute="top" id="m5E-YH-mwy"/>
                             <constraint firstItem="rtp-4X-GM3" firstAttribute="top" secondItem="31B-x2-KTX" secondAttribute="top" id="oEd-51-QGr"/>
                             <constraint firstItem="rtp-4X-GM3" firstAttribute="leading" secondItem="31B-x2-KTX" secondAttribute="leading" id="peE-bP-Vr2"/>
+                            <constraint firstAttribute="width" constant="100" id="s99-Ii-2hC"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -69,9 +71,6 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
