--- a/Meals-Drinks/Base.lproj/Main.storyboard
+++ b/Meals-Drinks/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="wZf-wY-VoV"/>
                                 </connections>
                             </tableView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="4Qg-0I-nim">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="4Qg-0I-nim">
                                 <rect key="frame" x="0.0" y="102" width="414" height="132"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Ply-MV-bfO">
@@ -83,15 +83,18 @@
                                                     <constraint firstAttribute="height" constant="324" id="tam-Nl-401"/>
                                                 </constraints>
                                             </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZuK-A9-gO1">
-                                                <rect key="frame" x="16" y="390" width="374" height="20.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZuK-A9-gO1">
+                                                <rect key="frame" x="16" y="390" width="374" height="754"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sqY-tl-4V4">
-                                                <rect key="frame" x="16" y="426.5" width="374" height="179.5"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sqY-tl-4V4" customClass="YTPlayerView">
+                                                <rect key="frame" x="16" y="1144" width="374" height="200"/>
+                                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="200" id="RiP-r7-PhL"/>
+                                                </constraints>
                                             </view>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -101,11 +104,13 @@
                                             <constraint firstAttribute="width" constant="406" id="51D-Tt-f77"/>
                                             <constraint firstItem="PGi-ap-zVC" firstAttribute="top" secondItem="yL5-vO-cUF" secondAttribute="top" constant="50" id="8bb-Cb-O8T"/>
                                             <constraint firstAttribute="trailing" secondItem="ZuK-A9-gO1" secondAttribute="trailing" constant="16" id="Ib8-mJ-zp0"/>
-                                            <constraint firstItem="sqY-tl-4V4" firstAttribute="top" secondItem="ZuK-A9-gO1" secondAttribute="bottom" constant="16" id="OYF-C7-V9o"/>
+                                            <constraint firstAttribute="trailing" secondItem="sqY-tl-4V4" secondAttribute="trailing" constant="16" id="JmX-Je-r8g"/>
+                                            <constraint firstItem="sqY-tl-4V4" firstAttribute="leading" secondItem="yL5-vO-cUF" secondAttribute="leading" constant="16" id="LFi-3z-ix4"/>
                                             <constraint firstItem="ZuK-A9-gO1" firstAttribute="top" secondItem="PGi-ap-zVC" secondAttribute="bottom" constant="16" id="Ouk-ZC-k8k"/>
                                             <constraint firstItem="ZuK-A9-gO1" firstAttribute="leading" secondItem="yL5-vO-cUF" secondAttribute="leading" constant="16" id="Qk5-KM-i0b"/>
                                             <constraint firstAttribute="trailing" secondItem="sqY-tl-4V4" secondAttribute="trailing" constant="16" id="Uhk-ij-nmc"/>
-                                            <constraint firstAttribute="bottom" secondItem="sqY-tl-4V4" secondAttribute="bottom" constant="738" id="fQu-jw-Jnl"/>
+                                            <constraint firstItem="sqY-tl-4V4" firstAttribute="top" secondItem="ZuK-A9-gO1" secondAttribute="bottom" id="msA-25-Sqn"/>
+                                            <constraint firstAttribute="bottom" secondItem="sqY-tl-4V4" secondAttribute="bottom" id="thY-Xc-hSh"/>
                                             <constraint firstItem="sqY-tl-4V4" firstAttribute="leading" secondItem="yL5-vO-cUF" secondAttribute="leading" constant="16" id="weR-Pa-yca"/>
                                         </constraints>
                                     </view>
