--- a/Meals-Drinks/Cells/CategoryDrinksCollectionViewCell.xib
+++ b/Meals-Drinks/Cells/CategoryDrinksCollectionViewCell.xib
@@ -20,7 +20,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OmC-Nv-GS0">
                         <rect key="frame" x="0.0" y="0.0" width="100" height="140"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Yt0-Q9-chC">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="forCoctailCategory" translatesAutoresizingMaskIntoConstraints="NO" id="Yt0-Q9-chC">
                                 <rect key="frame" x="0.0" y="0.0" width="100" height="107"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6e0-Jd-hmp">
@@ -62,6 +62,7 @@
         </collectionViewCell>
     </objects>
     <resources>
+        <image name="forCoctailCategory" width="828" height="1096"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
